[tool.poetry]
name = "repl_python3_Mavayya-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
translation = "^1.0.5"
googletrans = "^3.0.0"
bs4 = "^0.0.1"
pandas = "^1.3.5"
Levenshtein = "^0.16.0"
python-Levenshtein = "^0.12.2"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
